# src/Services/swagger/swagger.json
@@ -1304,6 +1304,37 @@
 				]
 			}
 		},
+		"/posts/reserved/post/{id}": {
+			"get": {
+				"operationId": "GetReservedPost",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/IResPost"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/clients/update/{id}": {
 			"patch": {
 				"operationId": "UpdateClient",
